<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.sergionovic.abspitchtrainer.UI.Register_Activity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:gravity="bottom"
            android:text="@string/WelcomeTitlewithJump"
            android:textColor="@color/white"
            android:textSize="32sp" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/register_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registerPhoto_body"
            android:textSize="@dimen/abc_text_size_subhead_material" />

        <ImageView
            android:id="@+id/imRegister_Photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btRegisterPhoto_Upload"
            android:layout_below="@+id/register_photo"
            android:layout_marginTop="8dp"
            android:padding="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/avatar" />

        <Button
            android:id="@+id/btRegisterPhoto_Upload"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_above="@+id/btRegisterPhoto_Next"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/wk_ripple"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/btRegisterPhoto_Upload"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btRegisterPhoto_Next"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/ripple_primary"
            android:elevation="2dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/btRegisterPhoto_Skip"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btRegisterPhoto_Back"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/ripple_primary"
            android:elevation="2dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/btRegisterPhoto_Back"
            android:textColor="@color/white" />

    </RelativeLayout>

</RelativeLayout>
