<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_profile_main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.sergionovic.abspitchtrainer.UI.EditProfile_Activity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:theme="@style/ToolbarTheme" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar_layout"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinput_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/etEdit_Name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/Name"
                    android:inputType="text"
                    android:textColor="@color/colorPrimaryText" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinput_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textinput_name"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/etEdit_Age"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/Age"
                    android:inputType="number"
                    android:textColor="@color/colorPrimaryText" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/editProfile_Image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textinput_age"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/EditImageProfile"
                android:padding="16dp"
                android:src="@drawable/avatar" />

            <Button
                android:id="@+id/btRegisterPhoto_Upload"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_below="@+id/editProfile_Image"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ripple_primary"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/btEdit_Photo"
                android:textColor="@color/white" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
